# encos-driver

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml  setup.py
config/: sysid_tests.csv
include/: driver.h
scripts/: motor_test.c  sysid_chirp.py
src/: constant.c  constant.h  driver.c  driver_pybind.cpp  encos_command.c  encos_command.h  main.c  motor_test.c  socket_can_driver.c  socket_can_driver.h
