[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "encos_driver"
version = "0.1.0"
description = "Modern Python bindings for Encos Motor Driver"
authors = [{name = "Your Name"}]
requires-python = ">=3.7"

[tool.scikit-build]
cmake.args = ["-DBUILD_PYTHON_BINDINGS=ON"]
